# sturmreader

./: .gitignore  .installcalibre.sh.swp  CHANGELOG  CMakeLists.txt  COPYING  README.md  README.md.save  clickable.json  installcalibre.sh  installcalibre.sh.save  manifest.json  manifest.json.in  sturmreader  sturmreader-launch  sturmreader.desktop.in  sturmreader.desktop.tr
Alpine/: APKBUILD
apparmor/: sturmreader.access.json  sturmreader.json
bashinterface/: CMakeLists.txt  bashinterface.cpp  bashinterface.h  bashinterfaceplugin.cpp  bashinterfaceplugin.h  qmldir
calibre/: .calibredb.swp  calibre  calibre-complete  calibre-customize  calibre-debug  calibre-parallel  calibre-server  calibre-smtp  calibredb  ebook-convert  ebook-device  ebook-edit  ebook-meta  ebook-polish  ebook-viewer  fetch-ebook-metadata  lrf2lrs  lrfviewer  lrs2lrf  markdown-calibre  pl  pythonlaunch  setupcalibre  web2disk
cmake/: FindQuaZip.cmake
filesystem/: filesystem.cpp  filesystem.cpp.save  filesystem.h
gettext/: CMakeLists.txt  gettextplugin.cpp  gettextplugin.h  gettexttr.cpp  gettexttr.h  qmldir
html/: .pdf.html.kate-swp  CMakeLists.txt  index.html  monocle.html  pdf.html  pdfjs.html
html/monocle/scripts/: monocore.js
po/: CMakeLists.txt  ca.po  de.po  es.po  fr.po  it.mo  it.po  nl.po  sturmreader.pot
ui/: About.qml  BookPage.qml  BookSources.qml  CMakeLists.txt  DefaultCover.qml  ImportPage.qml  Importer.qml  LocalBooks.qml  Reader.qml  Scaling.qml  Server.qml  filesystem.cpp  filesystem.h  fontlister.cpp  fontlister.h  gettext.cpp  gettext.h  main.cpp  main.qml  mimetype.cpp  mimetype.h  qmlResources.qrc  resources.qrc  stylesetting.cpp  stylesetting.h  units.cpp  units.h
ui/components/: Action.qml  FloatingButton.qml  Icon.qml  OptionSelector.qml  PageWithBottomEdge.qml  StylableComboBoxDelegate.qml  StylableOptionSelectorDelegate.qml  StyledButton.qml  SwipeControl.qml
ui/html/: .pdfjs.js.kate-swp  CMakeLists.txt  messaging.js  monocle.html  pdfjs.html  pdfjs.js  styling.js
ui/html/monocle/scripts/: monocore.js  monoctrl.js
ui/not-portable/: Importer.qml  Metrics.qml
ui/qhttpserver/: fileserver.cpp  qhttprequest.h
ui/qml/: About.qml  AuthorDelegate.qml  BookPage.qml  BookSettings.qml  BookSettingsDialog.qml  Colors.qml  Converter.qml  CoverDelegate.qml  DefaultCover.qml  FloatingButton.qml  Icon.qml  ImportPage.qml  Importer-ut.qml  Importer.qml  ImporterPortable.qml  ImporterUT.qml  LocalBooks.qml  Main.qml  Metrics-portable.qml  Metrics.qml  Reader.qml  Scaling.qml  Server.qml  Settings.qml  SuperDelegate.qml  SwipeControl.qml  Textures.qml  TitleDelegate.qml  WebViewAndroid.qml  WebViewPortable.qml  encoder.sh
ui/qml/not-portable/: Importer.qml
ui/reader/: cbzreader.cpp  cbzreader.h  epubreader.cpp  epubreader.h  pdfreader.cpp
units/: CMakeLists.txt  qmldir  units.cpp  units.h  unitsplugin.cpp  unitsplugin.h
